--- a/Axypo.CQRSLite/Axypo.CQRSLite.csproj
+++ b/Axypo.CQRSLite/Axypo.CQRSLite.csproj
@@ -1,14 +1,24 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <Version>0.1.0</Version>
+    <PackageProjectUrl>https://github.com/NDimo/Axypo.CQRSLite</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/NDimo/Axypo.CQRSLite</RepositoryUrl>
+    <Authors>NDimo</Authors>
+    <Company />
+    <PackageLicenseUrl></PackageLicenseUrl>
+    <PackageTags>cqrs</PackageTags>
+    <Description>Simple command and query data access separation library.</Description>
+    <Copyright>Copyright (c) 2019 NDimo</Copyright>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.CSharp" Version="4.5.0" />
+    <None Include="..\LICENSE" Pack="true" PackagePath="" />
   </ItemGroup>
 
 </Project>
